--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,6 @@
   text-align: center;
 }
 
-.heading {
-  @apply text-white px-4 py-2;
-}
-
 .btn {
-  @apply shadow py-2 px-4 rounded-full;
+  @apply shadow py-2 px-4 rounded text-white;
 }
