--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,7 @@
 .btn {
   @apply shadow py-2 px-4 rounded text-white;
 }
+
+.btn-focus {
+  @apply focus:ring-opacity-50 focus:outline-none focus:ring;
+}
